# lifx-breathing

./: .gitignore  .python-version  README.md  lifx-breathing.service  mypy.ini  pyproject.toml  requirements.txt  supervisord.conf
lifx_breathing/: flask_app.py  lifx.py  lifx_manager.py
lifx_breathing/templates/: index.html
tests/: test_lifx_breathing.py
