[tool.poetry]
name = "lifx-breathing"
version = "0.1.0"
description = "Breathing aid using a LIFX bulb"
authors = ["Asim Ihsan <githubemail@githubemail.ihsan.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
ipython = "^7.17.0"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
