[tool.poetry]
name = "lifx-breathing"
version = "0.1.0"
description = "Breathing aid using a LIFX bulb"
authors = ["Asim Ihsan <githubemail@githubemail.ihsan.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
supervisor = "^4.2.0"
flask_wtf = "^0.14.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
ipython = "^7.17.0"
ipdb = "^0.13.3"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
